# NeMo-Agent-Toolkit-Examples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  ops-bot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci_pipe.yml  pr.yaml
ci/scripts/: bootstrap_local_ci.sh  checks.sh  common.sh  copyright.py  documentation_checks.sh  gitutils.py  python_checks.sh  run_ci_local.sh
ci/scripts/github/: checks.sh  common.sh
examples/: CLAUDE.md
examples/.template/: README.md
examples/agent_identity_tool/: .gitignore  README.md  pyproject.toml
examples/agent_identity_tool/scripts/: mock_registry_server.py
examples/agent_identity_tool/src/nat_agent_identity/: register.py
examples/agent_identity_tool/src/nat_agent_identity/configs/: identity-agent.example.yml
examples/aidp_openai_demo/: README.md  pyproject.toml
examples/aidp_openai_demo/scripts/: load_support_tickets.py
examples/aidp_openai_demo/src/nat_aidp_openai_demo/: examples.py  rest_api.py  server.py
examples/aidp_openai_demo/src/nat_aidp_openai_demo/configs/: workflow.yml
examples/asset_lifecycle_management/: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_e2b_sandbox.py  vanna_training_data.yaml
examples/asset_lifecycle_management/configs/: E2B_TEST_README.md  README.md  SSL_CERTIFICATE_SETUP.md  config-reasoning.yaml
examples/asset_lifecycle_management/eval_output_old/: workflow_output.json
examples/asset_lifecycle_management/output_data/: e2b_success.json  e2b_test.json  how_many_units_have_ground_tru_results.json  pandas_test.json  what_is_the_ground_truth_rul_o_results.json
examples/asset_lifecycle_management/src/nat_alm_agent/: register.py
examples/asset_lifecycle_management/src/nat_alm_agent/code_execution/: __init__.py  e2b_code_execution_tool.py  e2b_sandbox.py
examples/asset_lifecycle_management/src/nat_alm_agent/evaluators/: multimodal_llm_judge_evaluator.py
examples/asset_lifecycle_management/test_comparison_output/: comparison_report.json
examples/asset_lifecycle_management/tests/: test_sql_comparison.py
examples/currency_agent_a2a/: README.md  pyproject.toml
examples/currency_agent_a2a/configs/: config.yml
examples/k8s_infra_monitor/: README.md  configs  data  pyproject.toml
examples/k8s_infra_monitor/src/nat_k8s_infra_monitor/: event_collector_tool.py  node_status_tool.py  pod_health_tool.py  prompts.py  register.py  resource_pressure_tool.py  severity_classifier.py  utils.py
examples/k8s_infra_monitor/tests/: test_k8s_infra_monitor.py
examples/kaggle_mcp/: README.md  pyproject.toml
examples/mcp_rag_demo/: README.md  configs  pyproject.toml
examples/mcp_rag_demo/scripts/: load_support_tickets.py  loaddata.py
examples/mcp_rag_demo/src/nat_mcp_rag_demo/: register.py
examples/mcp_rag_demo/src/nat_mcp_rag_demo/configs/: mcp-client-for-ui.yml  support-ui.yml
examples/nvingest_mcp/: README.md  configs  data  pyproject.toml
examples/nvingest_mcp/configs/: nvingest_mcp_client.yml  nvingest_mcp_server.yml
examples/nvingest_mcp/src/: .gitignore
examples/nvingest_mcp/src/nvingest_mcp_rag/: __init__.py  register.py
examples/nvingest_mcp/src/nvingest_mcp_rag/configs/: nvingest_agent_direct.yml  nvingest_mcp_client.yml
examples/profiler_agent/: README.md  pyproject.toml
examples/profiler_agent/tests/: test_profiler_agent.py
examples/prometheus_avatar_mcp/: README.md
examples/prometheus_avatar_mcp/configs/: config.yml
examples/sandbox_agent/: Dockerfile  README.md  configs  data  docker-compose.yaml  pyproject.toml
examples/sandbox_agent/scripts/: enrich_gaia_dataset.py
examples/sandbox_agent/src/nat_sandbox_agent/: __init__.py  register.py
examples/sandbox_agent/src/nat_sandbox_agent/configs/: config.yaml  config_daytona.yaml  config_daytona_gaia.yaml  config_gaia.yaml
examples/sandbox_agent/src/nat_sandbox_agent/prompts/: __init__.py  system_prompt.py
examples/sandbox_agent/src/nat_sandbox_agent/sandbox/: __init__.py  base.py  daytona_sandbox.py  docker_sandbox.py  factory.py
examples/sandbox_agent/src/nat_sandbox_agent/tools/: __init__.py  common.py  factory.py
examples/sandbox_agent/src/nat_sandbox_agent/tools/host/: __init__.py  image_describe.py  web_fetch.py  web_search.py  youtube.py
examples/sandbox_agent/src/nat_sandbox_agent/tools/sandbox/: __init__.py  browser.py  execution.py  executor.py  file_ops.py
examples/sandbox_agent/src/nat_sandbox_agent/utils/: __init__.py  answer_cleaning.py
examples/sandbox_agent/tests/: __init__.py  conftest.py  test_daytona_sandbox.py  test_docker_sandbox_integration.py  test_prompts.py  test_register.py  test_sandbox.py  test_tools_factory.py  test_tools_host.py  test_tools_image_describe.py  test_tools_sandbox.py  test_utils.py
examples/spraay_crypto_payments/: README.md  pyproject.toml
examples/spraay_crypto_payments/configs/: config.yml
examples/spraay_crypto_payments/scripts/: live_batch_send_smoke.py
examples/spraay_crypto_payments/src/spraay_crypto_payments/: __init__.py  register.py  spraay_client.py  spraay_tools.py
examples/unstructured_transform_mcp/: README.md  configs  pyproject.toml
examples/unstructured_transform_mcp/src/nat_unstructured_transform_mcp/: register.py
examples/unstructured_transform_mcp/tests/: test_transform_document.py  test_workflow_integration.py
examples/x402_payment_tool/: .gitignore  README.md  pyproject.toml
examples/x402_payment_tool/scripts/: mock_paid_api.py  mock_x402_server.py
examples/x402_payment_tool/src/nat_x402_payment/: payment_tool.py  register.py  spending_policy.py  wallet.py  x402.py
examples/x402_payment_tool/src/nat_x402_payment/configs/: payment-agent.example.yml  payment-agent.yml.example
industries/asset_lifecycle_management/: COMPARISON.md  MIGRATION_SUMMARY.md  README_MIGRATION.md  pyproject.toml
industries/asset_lifecycle_management/moment/: pyproject.toml
industries/asset_lifecycle_management/test_comparison_output/: COMPARISON_SUMMARY.md
(+8 files in other folders)
