# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "nat-agent-identity"
version = "0.1.0"
description = "Agent identity verification tool for NeMo Agent Toolkit using ERC-8004 registries"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "nvidia-nat[langchain]~=1.4",
    "httpx>=0.27.0",
]

[project.entry-points."nat.components"]
agent_identity = "nat_agent_identity.register"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
