[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../.."

[project]
name = "nat_mcp_rag_demo"
dynamic = ["version"]
dependencies = ["nvidia-nat[langchain]~=1.3", "pymilvus~=2.6"]
requires-python = ">=3.11,<3.14"
description = "Support ticket MCP demo with NVIDIA NIMs"
keywords = ["ai", "rag", "mcp", "nvidia"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../..", editable = true }

[project.entry-points.'nat.components']
support_tools = "support_tools.register"

