# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "nat_mcp_rag_demo"
version = "0.1.0"
dependencies = [
    "nvidia-nat[langchain]~=1.4",
    "nvidia-nat[mcp]~=1.4",
    "pymilvus~=2.6",
    "langchain-nvidia-ai-endpoints~=0.3",
]
requires-python = ">=3.11,<3.14"
description = "MCP RAG demo with NVIDIA NIMs for support ticket search"
keywords = ["ai", "rag", "mcp", "nvidia", "nim"]
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
nat_mcp_rag_demo = "nat_mcp_rag_demo.register"

[tool.setuptools.packages.find]
where = ["src"]
