# SPDX-FileCopyrightText: Copyright (c) 2024-2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "nvingest_mcp"
version = "0.1.0"
dependencies = [
    "nvidia-nat[mcp,langchain]~=1.3",
    "nv-ingest-client",
    "llama_index",
    "llama-index-embeddings-nvidia",
    "llama-index-llms-nvidia",
    "llama-index-vector-stores-milvus",
    "pymilvus[bulk_writer,model]",  # bulk_writer: minio/azure, model: BM25EmbeddingFunction
    "minio"
]
requires-python = ">=3.11,<3.14"
description = "NV-Ingest MCP Server + RAG Workflow Example using NeMo Agent Toolkit"
keywords = ["ai", "rag", "agents", "mcp", "nv-ingest"]
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
nvingest_mcp = "nvingest_mcp_rag.register"

