# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../.."

[project]
name = "nat_sandbox_agent"
dynamic = ["version"]
dependencies = [
    # NAT core
    "nvidia-nat[langchain]>=1.5.0a0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",

    # Docker sandbox
    "docker>=7.0.0",

    # Daytona sandbox (optional)
    "daytona>=0.1.0",

    # Browser automation
    "playwright>=1.40.0",

    # Web search (Tavily API - runs on host, not in sandbox)
    "tavily-python>=0.5.0",

    # Document generation
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "markdown>=3.5.0",

    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Utilities
    "aiofiles>=23.0.0",
]
requires-python = ">=3.11,<3.14"
description = "Sandbox Agent - A general-purpose agent with sandboxed execution capabilities for NAT"
readme = "README.md"
classifiers = ["Programming Language :: Python"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

# [tool.uv.sources]
# nvidia-nat = { path = "../../..", editable = true }  # Disabled: using PyPI version

# NAT component entry point - this registers the workflow
[project.entry-points.'nat.components']
nat_sandbox_agent = "nat_sandbox_agent.register"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_asyncio]
asyncio_mode = "auto"
