# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "spraay-crypto-payments"
version = "0.1.0"
description = "Spraay x402 crypto payment tools for NVIDIA NeMo Agent Toolkit"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "nvidia-nat>=1.3.0",
    "httpx>=0.28.1",
    # x402 payment SDK for live-mode execution. The [evm] extra pulls eth-account
    # and web3 for EIP-3009 USDC signing; [httpx] enables the async payment
    # transport. Dry-run mode uses none of this (x402 is imported lazily).
    "x402[evm,httpx]>=2.15.0,<3.0.0",
    "eth-account>=0.13.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nat.components']
spraay_crypto_payments = "spraay_crypto_payments.register"
