# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../.."

[project]
name = "nat_x402_payment"
dynamic = ["version"]
dependencies = [
    "nvidia-nat[langchain]>=1.4.0a0,<1.5.0",
    "httpx>=0.27.0",
    "eth-account>=0.13.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.11,<3.14"
description = "x402 payment-enabled tool for NeMo Agent Toolkit — handle HTTP 402 payment negotiation in agent loops"
keywords = ["ai", "payments", "x402", "nvidia", "agents", "wallet"]
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
nat_x402_payment = "nat_x402_payment.register"

[tool.setuptools.packages.find]
where = ["src"]
